--- a/numinverso.html
+++ b/numinverso.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Problema 3 - Invertir Número</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="problema3.js"></script>
 </head>
 <body>
 <div id="navbar-container"></div>
@@ -24,10 +25,11 @@ fetch("navbar.html")
             <input type="number" class="form-control">
         </div>
 
-        <button class="btn btn-primary">Invertir</button>
+        <button type="button" class="btn btn-primary" onclick="invertirNum()">Invertir</button>
+
+        <p id="resultado" class="mt-3 fs-4 text-success fw-semibold"></p>
     </form>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
