--- a/calificacion.html
+++ b/calificacion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Problema 1 - Calificación</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="problema1.js"></script>
 </head>
 <body>
 <div id="navbar-container"></div>
@@ -21,25 +22,22 @@ fetch("navbar.html")
     <form class="mt-4">
         <div class="mb-3">
             <label class="form-label">Parcial 1</label>
-            <input type="number" class="form-control">
+            <input type="number" class="form-control" id="nota1">
         </div>
 
         <div class="mb-3">
             <label class="form-label">Parcial 2</label>
-            <input type="number" class="form-control">
+            <input type="number" class="form-control" id="nota2">
         </div>
 
         <div class="mb-3">
             <label class="form-label">Parcial 3</label>
-            <input type="number" class="form-control">
+            <input type="number" class="form-control" id="nota3">
         </div>
 
-        <div class="mb-3">
-            <label class="form-label">Semestral</label>
-            <input type="number" class="form-control">
-        </div>
+        <button type="button" class="btn btn-primary"onclick="calcularCalificacion()">Calcular</button>
+        <p id="resultado"></p>
 
-        <button class="btn btn-primary">Calcular</button>
     </form>
 </div>
 
